--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -321,6 +321,7 @@ button.dark-btn {
   border-radius: 12px;
   color: var(--font-color-white);
   height: 416px;
+  margin-bottom: 52px;
 }
 
 h3 {
@@ -334,7 +335,8 @@ h3 {
   margin-bottom: 26px;
 }
 
-#free-courses .courses {
+#free-courses .courses,
+#important-info .information {
   height: 90%;
   overflow-y: scroll;
 }
@@ -348,8 +350,38 @@ h3 {
   margin-right: 22px;
 }
 
-#free-courses .courses ul li h4 {
+#free-courses .courses ul li h4,
+#important-info ul li h4 {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
+}
+
+#important-info {
+  background: linear-gradient(
+    107.95deg,
+    #ffe9c7 2.44%,
+    #ffe1b3 31.39%,
+    #ffd89c 79.71%
+  );
+  border-radius: 12px;
+  padding: 34px 32px;
+  height: 416px;
+  margin-bottom: 52px;
+}
+
+#important-info h3 {
+  font-weight: 600;
+  margin-bottom: 26px;
+}
+
+#important-info ul li {
+  display: flex;
+  align-items: center;
+  padding: 16px 0px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.42);
+}
+
+#important-info ul li img {
+  margin-right: 22px;
 }
