--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -287,6 +287,24 @@ button i {
   color: #fff;
 }
 
+button.dark-btn i {
+  animation: vibrate 1s linear infinite both;
+}
+@keyframes vibrate {
+  0% {
+    transform: translateX(0%);
+  }
+  25% {
+    transform: translateX(5%);
+  }
+  75% {
+    transform: translateX(-5%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
 button.light-btn {
   position: relative;
   border: 1px solid #000000;
