--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -444,7 +444,7 @@ h2 {
 
 #courses-container {
   display: flex;
-  overflow-x: visible;
+  overflow-x: scroll;
   padding: 30px 0px;
   transition: all 1s ease;
 }
