added the styling for our team section

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -492,3 +492,36 @@ h2 {
 #courses-container .course a i {
   margin-left: 0.4rem;
 }
+
+/* ------- styling team section --------------- */
+#team {
+  background: #fff5f5;
+  border-radius: 12px;
+  padding: 70px 32px 10px 32px;
+  text-align: center;
+}
+
+#team h2 {
+  margin-bottom: 0.25rem;
+}
+#team > p {
+  font-size: 16px;
+  line-height: 24px;
+
+  color: #474748;
+  margin-bottom: 2rem;
+}
+#team .member p {
+  color: var(--font-color-heading);
+  transform: translateY(-1.5rem);
+}
+
+#team .member {
+  margin-bottom: 1rem;
+}
+
+#team .member p.name {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 33px;
+}
