--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -547,6 +547,16 @@ h2 {
   transition: max-height 0.5s ease;
 }
 
+#FAQs .question-container i {
+  display: inline;
+  position: absolute;
+  left: 35px;
+  background: white;
+  box-shadow: none;
+  color: var(--orange-color);
+  padding: 0px;
+  margin: 0px;
+}
 #FAQs .question-container .question p {
   font-weight: 500;
   font-size: 16px;
