--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -85,7 +85,7 @@ ul {
   transform: translateX(100vw);
   width: 90%;
 
-  transition: all 0.7s cubic-bezier(0, 1, 1, 1);
+  transition: all 0.5s cubic-bezier(0, 1, 1, 1);
   /* transition: width 1.7s cubic-bezier(0, 1, 1, 1); */
   opacity: 0;
   display: flex;
@@ -593,4 +593,72 @@ h2 {
 #contact-us-btn {
   margin: auto;
   margin-bottom: 5rem;
+}
+
+.orange {
+  color: var(--orange-color);
+}
+
+#testimonials {
+  padding: 4rem 20px;
+  background: #f3fbfe;
+  border-radius: 12px;
+}
+#testimonials > h2,
+#testimonials > p {
+  text-align: center;
+}
+
+#testimonials > h2 {
+  margin-bottom: 0.5rem;
+}
+#testimonials > p {
+  margin-bottom: 2rem;
+}
+
+#testimonials .owl-carousel {
+  margin-bottom: 3rem;
+}
+#testimonials button {
+  margin: auto;
+}
+
+#testimonials .review-container .person {
+  background: #ffffff;
+  box-shadow: 0px 11px 44px rgba(0, 0, 0, 0.09);
+  border-radius: 20px;
+  padding: 14px;
+  display: flex;
+  position: relative;
+  top: 40px;
+  width: 90%;
+}
+
+#testimonials .review-container .person img {
+  width: 4rem;
+  margin-right: 10px;
+}
+
+#testimonials .review-container .person .name-rating {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+
+  color: #000000;
+}
+
+#testimonials .review-container .review {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+
+  color: #474748;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0px 10px 34px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+  padding: 55px 25px 25px 30px;
 }
