added images of students

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -150,8 +150,8 @@ header#hero {
   order: 1;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 24px;
-  grid-row-gap: 30px;
+  grid-column-gap: 44px;
+  grid-row-gap: 40px;
   padding: 34px 65px;
   background: linear-gradient(
     180deg,
@@ -182,7 +182,7 @@ header#hero {
   position: absolute;
   top: 30%;
   /* transform: translate(110%, 0%); */
-  width: 30%;
+  width: 40%;
   text-align: center;
   font-weight: 500;
   font-size: 10px;
@@ -564,6 +564,7 @@ h2 {
   font-weight: 600;
   font-size: 22px;
   line-height: 33px;
+  margin-top: 1.5rem;
 }
 
 #FAQs {
