--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -1,14 +1,20 @@
 @media (min-width: 760px) {
   .menu {
     padding: 0px;
+    width: 100%;
+    position: fixed;
+    top: 0;
   }
+
   #menu-open {
     display: none;
   }
+
   .container {
     max-width: 1240px;
     margin: auto;
   }
+
   #menu-items {
     position: static;
     z-index: 0;
@@ -29,11 +35,11 @@
     box-shadow: none;
   }
 
-  #menu-items > #login {
+  #menu-items>#login {
     padding: 12px 18px;
   }
 
-  #menu-items > a {
+  #menu-items>a {
     border: none;
     font-family: "Poppins";
     font-style: normal;
@@ -47,13 +53,13 @@
     margin-right: 32px;
   }
 
-  #menu-items > a:nth-child(7) {
+  #menu-items>a:nth-child(7) {
     margin-bottom: 0px;
     /* border-bottom: 2px solid #fff; */
   }
 
-  #menu-items > a,
-  #menu-items > button {
+  #menu-items>a,
+  #menu-items>button {
     transform: translateX(0%);
     transition: transform 0.7s cubic-bezier(0, 1, 1, 1);
   }
@@ -62,23 +68,27 @@
   header#hero {
     display: flex;
     flex-direction: row;
-    margin-bottom: 136px;
+    margin-top: 136px;
     align-items: center;
     justify-content: center;
   }
+
   .main-section {
     order: 0;
     margin-right: 100px;
     width: 50%;
   }
+
   h1 {
     font-size: 58px;
     line-height: 67px;
   }
+
   .course-description {
     margin-top: 15px;
     margin-bottom: 30px;
   }
+
   #container-for-free-course-and-imp-info {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -117,16 +127,19 @@
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.9);
   }
+
   #enroll-test-series {
     position: relative;
     padding: 45px 70px;
   }
+
   #enroll-test-series .right {
     display: block;
     position: absolute;
     right: 10px;
     top: -30px;
   }
+
   #enroll-test-series .left {
     width: 50%;
   }
@@ -148,4 +161,17 @@
     display: flex;
     justify-content: space-evenly;
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--orange-color);
+  border-radius: 5px;
 }
