--- a/newcourseslider/newcourseslider.css
+++ b/newcourseslider/newcourseslider.css
@@ -24,6 +24,11 @@
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
+.with-border {
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
 .line-height {
     line-height: 250px;
     font-size: 90px;
