--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -574,6 +574,7 @@ h2 {
   padding: 14px 15px;
   margin-right: 20px;
   max-width: 65vw;
+  height: fit-content;
 }
 
 #courses-container .course:first-child {
