--- a/newcourseslider/newcourseslider.css
+++ b/newcourseslider/newcourseslider.css
@@ -22,6 +22,7 @@
     margin: 20px 0;
     border-radius: 10px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    height: 26rem;
 }
 
 .with-border {
