--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -329,6 +329,18 @@ footer {
     gap: 2rem;
     margin-top: 2rem;
   }
+
+  #courses-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 30px 0px;
+    transition: all 1s ease;
+  }
+
+
 }
 
 .explore-course {
